[gd_scene load_steps=23 format=4 uid="uid://bo2gjmkf31bd7"]

[ext_resource type="Script" uid="uid://bjpvwey8m1e0o" path="res://GERF_version/workstation/script/Incubator.gd" id="1_ww0gc"]
[ext_resource type="PackedScene" uid="uid://yn40icnwyppt" path="res://GERF_version/Items/scene/bioproduct.tscn" id="2_tihix"]
[ext_resource type="Texture2D" uid="uid://db1d16uoeyeon" path="res://Prototype_presentation_8.05.2025/overlab/asset/16px/tilesStuff.png" id="2_wrxm3"]
[ext_resource type="Texture2D" uid="uid://dlvs6u6flgvrk" path="res://GERF_version/Asset/graphic/Slime.png" id="3_3an5v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afujj"]
size = Vector2(32, 31)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0rxss"]
texture = ExtResource("2_wrxm3")
29:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
2:1/0 = 0
3:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
18:6/0 = 0
19:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
2:7/0 = 0
3:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
2:8/0 = 0
3:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
35:8/0 = 0
2:9/0 = 0
3:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
0:13/0 = 0
1:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
9:13/0 = 0
10:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
0:14/0 = 0
1:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
36:14/0 = 0
0:15/0 = 0
1:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0
36:15/0 = 0

[sub_resource type="TileSet" id="TileSet_sucgt"]
sources/0 = SubResource("TileSetAtlasSource_0rxss")

[sub_resource type="AtlasTexture" id="AtlasTexture_tihix"]
atlas = ExtResource("3_3an5v")
region = Rect2(256, 128, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec7ig"]
atlas = ExtResource("3_3an5v")
region = Rect2(288, 128, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bece"]
atlas = ExtResource("3_3an5v")
region = Rect2(320, 128, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_11syj"]
atlas = ExtResource("3_3an5v")
region = Rect2(256, 160, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq2i5"]
atlas = ExtResource("3_3an5v")
region = Rect2(288, 160, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w55ak"]
atlas = ExtResource("3_3an5v")
region = Rect2(320, 160, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijrgd"]
atlas = ExtResource("3_3an5v")
region = Rect2(352, 160, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v05ux"]
atlas = ExtResource("3_3an5v")
region = Rect2(384, 160, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6qjq"]
atlas = ExtResource("3_3an5v")
region = Rect2(416, 160, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk12u"]
atlas = ExtResource("3_3an5v")
region = Rect2(448, 160, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu878"]
atlas = ExtResource("3_3an5v")
region = Rect2(256, 176, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_44jhf"]
atlas = ExtResource("3_3an5v")
region = Rect2(288, 176, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_muknx"]
atlas = ExtResource("3_3an5v")
region = Rect2(320, 176, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhakl"]
atlas = ExtResource("3_3an5v")
region = Rect2(352, 176, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tihix"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tihix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec7ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bece")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11syj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq2i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w55ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijrgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v05ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6qjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk12u")
}],
"loop": false,
"name": &"fail",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu878")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44jhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muknx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhakl")
}],
"loop": true,
"name": &"prod",
"speed": 5.0
}]

[node name="Incubator" type="StaticBody2D" groups=["workstation"]]
script = ExtResource("1_ww0gc")
item = ExtResource("2_tihix")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 32.0
offset_bottom = 32.0
color = Color(1, 1, 1, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(17, 16)
shape = SubResource("RectangleShape2D_afujj")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
z_index = 2
offset_left = 45.0
offset_top = -6.0
offset_right = 86.0
offset_bottom = 3.0
rotation = 1.5708
max_value = 20.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="TileMap" type="TileMapLayer" parent="."]
position = Vector2(-7, 0)
tile_map_data = PackedByteArray("AAAAAP7/AAAeAAcAAAAAAP//AAAeAAgAAAAAAAAAAAAeAAkAAAAAAAEAAAAeAAoAAAABAP7/AAAfAAcAAAABAP//AAAfAAgAAAABAAAAAAAfAAkAAAABAAEAAAAfAAoAAAACAP7/AAAgAAcAAAACAP//AAAgAAgAAAACAAAAAAAgAAkAAAACAAEAAAAgAAoAAAA=")
tile_set = SubResource("TileSet_sucgt")

[node name="mCell" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.525)
position = Vector2(15, 6)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_tihix")
animation = &"fail"
autoplay = "default"

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -4.0
offset_top = -40.0
offset_right = 36.0
offset_bottom = -19.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="mCell" to="." method="_on_m_cell_animation_finished"]
